Fixed profile image alignment on mobile

--- a/src/pages/AboutMe/AboutMe.css
+++ b/src/pages/AboutMe/AboutMe.css
@@ -26,6 +26,7 @@
 @media screen and (max-width: 900px) {
     .aboutContainer {
         flex-direction: column;
+        align-items: center;
         margin: 10px 0;
         padding: 0 20px;
     }
@@ -36,7 +37,7 @@
     }
 
     .imgSection {
-        margin: 20px 0 0 0;
+        margin: 0 0 20px 0;
     }
 
 
